tests/react/react.exp
children.js:9
  9: <A />; // error: property `children` not found
     ^^^^^ React element `A`
  6:   props: { children: string };
              ^^^^^^^^^^^^^^^^^^^^ property `children`. Property not found in
  9: <A />; // error: property `children` not found
     ^^^^^ props of React element `A`

children.js:10
 10: <A></A>; // error: property `children` not found
     ^^^ React element `A`
  6:   props: { children: string };
              ^^^^^^^^^^^^^^^^^^^^ property `children`. Property not found in
 10: <A></A>; // error: property `children` not found
     ^^^ props of React element `A`

children.js:11
 11: <A children={0} />; // error: number ~> string
     ^^^^^^^^^^^^^^^^^^ React element `A`
 11: <A children={0} />; // error: number ~> string
                  ^ number. This type is incompatible with
  6:   props: { children: string };
                          ^^^^^^ string

children.js:13
 13: <A>{0}</A>; // error: number ~> string
     ^^^ React element `A`
 13: <A>{0}</A>; // error: number ~> string
         ^ number. This type is incompatible with
  6:   props: { children: string };
                          ^^^^^^ string

children.js:16
 16: <A children={""}>{null}</A>; // error: null ~> string
     ^^^^^^^^^^^^^^^^^ React element `A`
 16: <A children={""}>{null}</A>; // error: null ~> string
                       ^^^^ null. This type is incompatible with
  6:   props: { children: string };
                          ^^^^^^ string

children.js:22
 22:   <A children={0}>
       ^^^^^^^^^^^^^^^^ React element `A`
 22:   <A children={0}>
                    ^ number. This type is incompatible with
  6:   props: { children: string };
                          ^^^^^^ string

children.js:36
 36:   <A>
       ^^^ React element `A`
 37:     x
         ^ array type. This type is incompatible with
  6:   props: { children: string };
                          ^^^^^^ string

children.js:57
 57:   <A>
       ^^^ React element `A`
  6:   props: { children: string };
              ^^^^^^^^^^^^^^^^^^^^ property `children`. Property not found in
 57:   <A>
       ^^^ props of React element `A`

children.js:78
 78:   <B>
       ^^^ React element `B`
 79:     a
         ^ string. Expected string literal `a b`
 71:   props: { children: "a b" };
                          ^^^^^ string literal `a b`

createElementRequiredProp_string.js:5
  5:   props: {
              ^ property `test`. Property not found in
 20:     return (<Cmp/>);
                 ^^^^^^ props of React element `Cmp`

import_react.js:7
  7: var b: number = new react.Component(); // Error: ReactComponent ~> number
                     ^^^^^^^^^^^^^^^^^^^^^ constructor call
  7: var b: number = new react.Component(); // Error: ReactComponent ~> number
                     ^^^^^^^^^^^^^^^^^^^^^ React$Component. This type is incompatible with
  7: var b: number = new react.Component(); // Error: ReactComponent ~> number
            ^^^^^^ number

jsx_spread.js:11
 11: var blah = <Foo {...props} />; // error bar, number given string expected
                ^^^^^^^^^^^^^^^^^^ React element `Foo`
 10: var props = {bar: 42};
                       ^^ number. This type is incompatible with
  6:     bar: React.PropTypes.string.isRequired,
              ^^^^^^^^^^^^^^^^^^^^^^ string

proptype_arrayOf.js:13
 13: var fail_not_array = <Example arr={2} />
                          ^^^^^^^^^^^^^^^^^^^ React element `Example`
 13: var fail_not_array = <Example arr={2} />
                                        ^ number. This type is incompatible with
  6:     arr: React.PropTypes.arrayOf(React.PropTypes.number).isRequired
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ arrayOf

proptype_arrayOf.js:14
 14: var fail_mistyped_elems = <Example arr={[1, "foo"]} />
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element `Example`
 14: var fail_mistyped_elems = <Example arr={[1, "foo"]} />
                                                 ^^^^^ string. This type is incompatible with
  6:     arr: React.PropTypes.arrayOf(React.PropTypes.number).isRequired
                                      ^^^^^^^^^^^^^^^^^^^^^^ number

proptype_func.js:14
 14: var fail_mistyped = <Example func={2} />
                         ^^^^^^^^^^^^^^^^^^^^ React element `Example`
 14: var fail_mistyped = <Example func={2} />
                                        ^ number. This type is incompatible with
  6:     func: React.PropTypes.func.isRequired
               ^^^^^^^^^^^^^^^^^^^^ func

proptype_object.js:13
 13: var fail_mistyped = <Example object={2} />
                         ^^^^^^^^^^^^^^^^^^^^^^ React element `Example`
 13: var fail_mistyped = <Example object={2} />
                                          ^ number. This type is incompatible with
  6:     object: React.PropTypes.object.isRequired
                 ^^^^^^^^^^^^^^^^^^^^^^ object

proptype_objectOf.js:13
 13: var fail_not_object = <Example obj={2} />
                           ^^^^^^^^^^^^^^^^^^^ React element `Example`
 13: var fail_not_object = <Example obj={2} />
                                         ^ number. This type is incompatible with
  6:     obj: React.PropTypes.objectOf(React.PropTypes.number).isRequired
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ objectOf

proptype_objectOf.js:14
 14: var fail_mistyped_props = <Example obj={{foo: "foo"}} />
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element `Example`
 14: var fail_mistyped_props = <Example obj={{foo: "foo"}} />
                                                   ^^^^^ string. This type is incompatible with
  6:     obj: React.PropTypes.objectOf(React.PropTypes.number).isRequired
                                       ^^^^^^^^^^^^^^^^^^^^^^ number

proptype_oneOf.js:11
 11: var ex2 = <Example literal="bar" />;
               ^^^^^^^^^^^^^^^^^^^^^^^^^ React element `Example`
 11: var ex2 = <Example literal="bar" />;
                                ^^^^^ string. Expected string literal `foo`, got `bar` instead
  6:     literal: React.PropTypes.oneOf(["foo"]).isRequired
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string literal `foo`

proptype_oneOfType.js:23
 23: var fail_bool = <Example prop={true} />
                     ^^^^^^^^^^^^^^^^^^^^^^^ React element `Example`
 23: var fail_bool = <Example prop={true} />
                                    ^^^^ boolean. This type is incompatible with
  6:     prop: React.PropTypes.oneOfType([
               ^ union: number | string
  Member 1:
    8:       React.PropTypes.number
             ^^^^^^^^^^^^^^^^^^^^^^ number
  Error:
   23: var fail_bool = <Example prop={true} />
                                      ^^^^ boolean. This type is incompatible with
    8:       React.PropTypes.number
             ^^^^^^^^^^^^^^^^^^^^^^ number
  Member 2:
    7:       React.PropTypes.string,
             ^^^^^^^^^^^^^^^^^^^^^^ string
  Error:
   23: var fail_bool = <Example prop={true} />
                                      ^^^^ boolean. This type is incompatible with
    7:       React.PropTypes.string,
             ^^^^^^^^^^^^^^^^^^^^^^ string


Found 20 errors
